--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MyConductor</string>
+    <string name="lower">&lt;&lt;</string>
+    <string name="tinyLower">&lt;</string>
+    <string name="tinyHigher">&gt;</string>
+    <string name="higher">&gt;&gt;</string>
+    <string name="tapToStart">Please Tap to Start..."   "</string>
+    <string name="tapToStop">Please Tap to Stop..."   "</string>
 </resources>
