打点下に■を描くところまで。 グラデーションを■とドットで分けたいので、現在ユニフォームとして画面全体に与えているcolorをドットの頂点に適用する。 それに先立ち、頂点情報をFIXさせるためglDrawArraysのGL_TRIANGLESからGL_TRIANGLE_FUNに変更する。 失敗の可能性があるため、一旦保管する。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="tinyLower">&lt;</string>
     <string name="tinyHigher">&gt;</string>
     <string name="higher">&gt;&gt;</string>
-    <string name="tapToStart">Please Tap to Start..."   "</string>
+    <string name="tapToStart">Please Tap to Start..."   "\n
+    描画中の値変更は禁止</string>
     <string name="tapToStop">Please Tap to Stop..."   "</string>
 </resources>
