・soundとの統合 ・Timestampを介した同期 ・初回起動時にsoundとgraphicのスピード比をプレファレンスへ書き込み ・それに伴う計測中のプログレスバー表示の追加 まで行う。 ・書き込まれた比率を反映させることはおこなっていない。 （裏拍有無でsoundのスピードが大きく変わるため、Timestampを介した同期は困難またはロジック複雑化の予想ができる。）
そのためgraphicから直接soundを起動できないか実験する。これには大きな改訂が必要となるため、一旦現時点で保存する。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="tapToStart">Please Tap to Start..."   "\n
     描画中の値変更は禁止</string>
     <string name="tapToStop">Please Tap to Stop..."   "</string>
+    <string name="progress_bar_disc">Please wait few second…\n
+            Measure the speed of your smartphone \n
+            for the first time only.</string>
 </resources>
